@@ -846,7 +846,8 @@ exit
 
       <dd>Negate the colors of the image</dd>
 
-      <dt><a href="image2.html#normalize">normalize</a></dt>
+      <dt><a href="image2.html#normalize">normalize</a>, <a href=
+      "image2.html#normalize_channel">normalize_channel</a></dt>
 
       <dd>Enhance the contrast of the image</dd>
 
